--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Meet Our Team</h1>
       <div class="team-members">
         <div class="team-member">
-          <img src="member1.jpg" alt="Member 1" />
+          <img src="photoR.jpg" alt="Member 1" />
           <h2>Member 1</h2>
           <h3>Harshita Srivastava</h3>
         </div>
