--- a/index.html
+++ b/index.html
@@ -11,26 +11,17 @@
       <h1>Meet Our Team</h1>
       <div class="team-members">
         <div class="team-member">
-          <img src="photoR.jpg" alt="Member 1" />
-          <h2>Member 1</h2>
+          <!-- Wrap the image with an anchor tag -->
+          <a
+            href="https://www.linkedin.com/in/harshita-srivastava-6805ab20b"
+            target="_blank"
+          >
+            <img src="photoR.jpg" alt="Harshita Srivastava" />
+          </a>
           <h3>Harshita Srivastava</h3>
         </div>
-        <div class="team-member">
-          <img src="member2.jpg" alt="Member 2" />
-          <h2>Member 2</h2>
-          <h3>Sanjana Manwatkar</h3>
-        </div>
-        <div class="team-member">
-          <img src="member3.jpg" alt="Member 3" />
-          <h2>Member 3</h2>
-          <h3>Abhinav Pandey</h3>
-        </div>
-        <div class="team-member">
-          <img src="member4.jpg" alt="Member 4" />
-          <h2>Member 4</h2>
-          <h3>Ayush Mishra</h3>
-        </div>
       </div>
+      <p>We are expanding our team!</p>
     </div>
   </body>
 </html>
